--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,14 @@ services:
     image: jmeter
     volumes:
      - .:/mnt/jmeter
-    command: -s -n -Jclient.rmi.localport=7000 -Jserver.rmi.localport=60000
+    command: -s -n -Jclient.rmi.localport=7000 -Jserver.rmi.localport=60000 -Jserver.rmi.ssl.disable=true
   slave-2:
     image: jmeter
     volumes:
      - .:/mnt/jmeter
-    command: -s -n -Jclient.rmi.localport=7000 -Jserver.rmi.localport=60000
+    command: -s -n -Jclient.rmi.localport=7000 -Jserver.rmi.localport=60000 -Jserver.rmi.ssl.disable=true
   slave-3:
     image: jmeter
     volumes:
      - .:/mnt/jmeter
-    command: -s -n -Jclient.rmi.localport=7000 -Jserver.rmi.localport=60000
+    command: -s -n -Jclient.rmi.localport=7000 -Jserver.rmi.localport=60000 -Jserver.rmi.ssl.disable=true
