fix to use secure RMI with distributed testing WARNING : this commit is without rmi_keystore.jks Follow link http://jmeter.apache.org/usermanual/remote-test.html#setup_ssl to create and appropiate keystore

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,14 @@ services:
     image: jmeter
     volumes:
      - .:/mnt/jmeter
-    command: -s -n -Jclient.rmi.localport=7000 -Jserver.rmi.localport=60000 -Jserver.rmi.ssl.disable=true
+    command: -s -n -Jserver.rmi.localport=60000 -Jserver.rmi.ssl.keystore.file=/mnt/jmeter/rmi_keystore.jks 
   slave-2:
     image: jmeter
     volumes:
      - .:/mnt/jmeter
-    command: -s -n -Jclient.rmi.localport=7000 -Jserver.rmi.localport=60000 -Jserver.rmi.ssl.disable=true
+    command: -s -n -Jserver.rmi.localport=60000 -Jserver.rmi.ssl.keystore.file=/mnt/jmeter/rmi_keystore.jks 
   slave-3:
     image: jmeter
     volumes:
      - .:/mnt/jmeter
-    command: -s -n -Jclient.rmi.localport=7000 -Jserver.rmi.localport=60000 -Jserver.rmi.ssl.disable=true
+    command: -s -n -Jserver.rmi.localport=60000 -Jserver.rmi.ssl.keystore.file=/mnt/jmeter/rmi_keystore.jks 
